chuck (1.5.0.0-1) unstable; urgency=medium

  * New upstream version
  * Remove upstreamed quilt patches
  * Update list of upstream docs

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 29 May 2023 12:00:02 +0100

chuck (1.4.2.0-1) unstable; urgency=medium

  * Patch to #include <limits.h> instead of <linux/limits.h>
  * Update standards version to 4.6.2, no changes needed.
  * New upstream version
  * Forward port quilt patches
  * Patch to allow parallel recursive make

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 23 Jan 2023 22:06:26 +0000

chuck (1.4.1.1-4) unstable; urgency=medium

  * Patch termios harder for extra portability

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 23 May 2022 13:52:50 +0100

chuck (1.4.1.1-3) unstable; urgency=medium

  * data package should be Multi-Arch: foreign
  * Patch dropping termio.h for termios.h

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 23 May 2022 11:09:25 +0100

chuck (1.4.1.1-2) unstable; urgency=medium

  * Patch to remove MAXPATHLEN, for Hurd
  * More spelling fixes

 -- Barak A. Pearlmutter <bap@debian.org>  Sat, 21 May 2022 10:50:06 +0100

chuck (1.4.1.1-1) unstable; urgency=medium

  * New upstream version
  * Forward port patches (all but spelling errors have been upstreamed)
  * Fail to fail if examples not found (as in CI test-build-any)
  * Add metadata with pointer to upstream development repo
  * Patch to remove "register" storage qualifier, which is not in ISO C++17
  * Enable warning by setting CHUCK_STRICT
  * Patch more spelling errors

 -- Barak A. Pearlmutter <bap@debian.org>  Thu, 19 May 2022 11:31:41 +0100

chuck (1.3.5.2-1) unstable; urgency=medium

  [ Christoph Biedl ]
  * New upstream version 1.3.5.2. (Closes: #775341, #904829, #562809)
    - Support for oss was dropped upstream
    - Support for pulseaudio added
  * Modernize packaging (closes: #999295)
  * Ship examples and data in a separate package

  [ Barak A. Pearlmutter ]