@@ -1,4 +1,1 @@
-
-build/chuck.alsa    usr/bin/
-build/chuck.pulse   usr/bin/
 chuck               usr/bin/
