@@ -1,3 +1,0 @@
-
-usr/share/man/man1/chuck.1.gz   usr/share/man/man1/chuck.alsa.1.gz
-usr/share/man/man1/chuck.1.gz   usr/share/man/man1/chuck.pulse.1.gz
