@@ -1,1 +1,1 @@
-build/chuck.1
+debian/chuck.1
