@@ -3,8 +3,9 @@ chuck (1.5.0.0-1) unstable; urgency=medium
   * New upstream version
   * Remove upstreamed quilt patches
   * Update list of upstream docs
+  * Generate a single executable that supports multiple sound systems
 
- -- Barak A. Pearlmutter <bap@debian.org>  Mon, 29 May 2023 12:00:02 +0100
+ -- Barak A. Pearlmutter <bap@debian.org>  Mon, 29 May 2023 12:33:33 +0100
 
 chuck (1.4.2.0-1) unstable; urgency=medium
 
